# 7dmt

./: .gitmodules  Cargo.toml  justfile
.trunk/: trunk.yaml
modinfo/: Cargo.toml
modinfo/src/: impls.rs  lib.rs  modinfo_from_string_tests.rs  modinfo_to_string_tests.rs
modinfo/src/tests/: mod.rs  modinfo_from_string_tests.rs  modinfo_tests.rs  modinfo_to_string_tests.rs  version_tests.rs
modinfo/src/tests/fixtures/: mod.rs
modlet/: Cargo.toml
modlet/src/: lib.rs
src/: dmt.rs  lib.rs  main.rs  modlet_xml.rs
src/dmt/: cli.rs  helpers.rs
src/dmt/commands/: bump.rs  convert.rs  init.rs  mod.rs  package.rs  validate.rs
src/modlet/: mod.rs
src/modlet/modlet_xml/: command.rs  mod.rs
src/modlet_xml/: command.rs
