[package]
name = "dmt"
description = "'7 Days Modding Tool' - A command line tool for managing 7 Days to Die Modlet builds"
authors = ["Donovan C. Young"]
edition = "2021"
version = "0.2.0"
rust-version = "1.74"
readme = "README.md"
repository = "https://github.com/DonovanMods/7dmt"
documentation = "https://docs.rs/7dmt"
license = "MIT OR Apache-2.0"
keywords = ["7dtd", "game-dev", "modinfo", "xml", "modding"]
categories = [
  "development-tools",
  "game-development",
  "parser-implementations",
  "command-line-utilities",
]
exclude = [".trunk/*", "tests/*", "src/tests/*"]

[[bin]]
name = "7dmt"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[workspace]
members = ["modinfo", "modxml"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false }
console = "0.15"
dialoguer = "0.11"
dirs = "5"
eyre = "0.6"
modxml = { package = "modxml_7dtd", path = "modxml" }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.12"
lazy_static = "1"
modinfo = { package = "modinfo_7dtd", path = "modinfo" }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
