[package]
name = "modinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
lenient_semver_parser = "0.4.2"
lenient_semver_version_builder = "0.4.2"
lenient_version = "0.4.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
semver = "1.0.20"
